2005-04-14 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix Content object enumeration preventing usage of admin interface
	* Partial fix for RSS feed encoding (multiple feed aggregation still broken);

2005-04-14 Benoit Grégoire  <bock@step.polymtl.ca>
	* First part of the future content delivery infrastructure.  Many files added.

2005-04-01 François Proulx  <francois.proulx@gmail.com>
	* Modified gen.sh script to match UTF-8
	* Added PAP RADIUS encryption support ( asked by Paris Sans Fil )
	
2005-04-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* wifidog/templates/auth_sources_selection.html:  Add missing file from francois's commit.

2005-04-01 Philippe April <philippe@ilesansfil.org>
	* Fixed missing parenthesis in classes/User.php
	* Removed unused files
	* fixed schema_validate.php (typos)

2005-04-01 Francois Proulx  <francois.proulx@gmail.com>
	* EVERYTHING IS NOW UTF-8 YOU MUST EDIT YOUR FILES WITH AN UTF-8 COMPLIANT EDITOR
	* The database will be converted to UTF-8 (version 5)
	* Added select boxes ( or hidden ) html form elements to choose the network for signup, lost password, username
	
2005-04-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add constraints to account_origin to detect errors on inserts.
	* Remove IDRC test server

2005-04-01 Philippe April <philippe@ilesansfil.org>
	* User.php: Add reference to $db global variable.
	* Tagged v0_1_0_alpha1
	* Removed spaces in AuthenticatorLocalUser.php
	
2005-03-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* Remove spaces after php blocks in various files.
	* Temporarily fix single authentication source not present bug in login smarty template.  All other places where we select the network will be fixed tommorow.
	* Fix initial schema errors.
	
2005-03-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* More RADIUS install documentation.
	* Fix schema_validate.php
	
2005-03-31 Francois Proulx  <francois.proulx@gmail.com>
 	* Moved language definition 