@@ -1,4 +1,7 @@
 2005-04-14 Benoit Grégoire  <bock@step.polymtl.ca>
+	* Content.php:  Fix db reference;
+
+2005-04-14 Benoit Grégoire  <bock@step.polymtl.ca>
 	* Fix Content object enumeration preventing usage of admin interface
 	* Partial fix for RSS feed encoding (multiple feed aggregation still broken);
 
